cswap/src/snapshots/cswap__parser__tests__fp_snap.snap
---
source: cswap/src/parser.rs
expression: "fp(\"(fp #b0 #b00000000000 #x0000000000000)\").unwrap().1"
---
Num(
    Bin(
        [
            '0',
        ],
    ),
    Bin(
        [
            '0',
            '0',
            '0',
            '0',
            '0',
            '0',
            '0',
            '0',
            '0',
            '0',
            '0',
        ],
    ),
    Hex(
        "0000000000000",
    ),
)
