cswap/src/snapshots/cswap__parser__tests__fp_sort_snap.snap
---
source: cswap/src/parser.rs
expression: "fp_sort(\"(_ FloatingPoint 11 53)\")"
---
Ok(
    (
        "",
        Fp(
            "11",
            "53",
        ),
    ),
)
