cswap/src/snapshots/cswap__parser__tests__fp_special_snap.snap
---
source: cswap/src/parser.rs
expression: "fp(\"(_ +oo 2 3)\")"
---
Ok(
    (
        "",
        PInf(
            "2",
            "3",
        ),
    ),
)
