cswap/src/snapshots/cswap__parser__tests__fpx_snap.snap
---
source: cswap/src/parser.rs
expression: "fp(\"(fp #b0 #b00000000000 #x0000000000000)\").unwrap().1.get_eb_sb()"
---
(
    "11",
    "53",
)
