cswap/src/snapshots/cswap__parser__tests__func_noargs_snap.snap
---
source: cswap/src/parser.rs
expression: "define_func(\"(define-fun foo () Int 7)\")"
---
Ok(
    (
        "",
        DefineFun(
            Token(
                "foo",
            ),
            [],
            UInt,
            RefCell {
                value: Constant(
                    RefCell {
                        value: UInt(
                            "7",
                        ),
                    },
                ),
            },
        ),
    ),
)
