cswap/src/snapshots/cswap__parser__tests__generic_snap.snap
---
source: cswap/src/parser.rs
expression: "generic(\"line \\n break\")"
---
Ok(
    (
        " break",
        "line ",
    ),
)
