cswap/src/snapshots/cswap__parser__tests__generic_w_eof_snap.snap
---
source: cswap/src/parser.rs
expression: "z3o(\"no linebreak before end\")"
---
Ok(
    (
        "no linebreak before end",
        [
            Generic(
                "no linebreak before end",
            ),
        ],
    ),
)
