cswap/src/snapshots/cswap__parser__tests__identifier_snap.snap
---
source: cswap/src/parser.rs
expression: df.unwrap().1
---
Assert(
    RefCell {
        value: BExp(
            RefCell {
                value: Fpgt,
            },
            [
                RefCell {
                    value: Symbol(
                        RefCell {
                            value: Token(
                                "~C1_const_-25497521",
                            ),
                        },
                    ),
                },
                RefCell {
                    value: Constant(
                        RefCell {
                            value: Fp(
                                PZero(
                                    "8",
                                    "24",
                                ),
                            ),
                        },
                    ),
                },
            ],
        ),
    },
)
