cswap/src/snapshots/cswap__parser__tests__iv_snap.snap
---
source: src/parser.rs
expression: "iv_model_err(\"(error \\\"line 5 column 10: an invalid model was generated\\\")\")"
---
Ok(
    (
        "",
        "invalid model was generated",
    ),
)
