cswap/src/snapshots/cswap__parser__tests__model_snap.snap
---
source: src/parser.rs
expression: "model(\"(model (define-fun f () Int 7))\")"
---
Ok(
    (
        "",
        [
            (
                Token(
                    "f",
                ),
                [],
                UInt,
                Constant(
                    RefCell {
                        value: UInt(
                            "7",
                        ),
                    },
                ),
            ),
        ],
    ),
)
